forms.scss: fielset => + margin: 0; (fixes box overflow)

--- a/assets/scss/forms.scss
+++ b/assets/scss/forms.scss
@@ -52,6 +52,7 @@ form {
 
 fieldset {
     width: 100%;
+    margin: 0;
 	padding: $form-padding;
 	border: none; // default override
 }
